# cpp-primer-plus-6-code

./: CMakeLists.txt  README.md
4/: 4-24-choices.cpp  4-3-instr1.cpp  4-4-instr2.cpp  4-5-instr3.cpp  4-6-numstr.cpp
6/: 6-15-outfile.cpp  6-16-sumafile.cpp
