cmake_minimum_required(VERSION 3.16)
project(cpp_primer_plus_6_code)

set(CMAKE_CXX_STANDARD 14)

add_executable(4-3-instr1 4/4-3-instr1.cpp)
add_executable(4-4-instr2 4/4-4-instr2.cpp)
add_executable(4-5-instr3 4/4-5-instr3.cpp)
add_executable(4-6-numstr 4/4-6-numstr.cpp)
add_executable(4-24-choices 4/4-24-choices.cpp)

add_executable(6-15-outfile 6/6-15-outfile.cpp)

